--- a/vhack2/pubspec.yaml
+++ b/vhack2/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   table_calendar: ^3.2.0
+  percent_indicator: ^3.0.1
+  fl_chart: ^0.35.0
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
